--- a/Docker-compose.yml
+++ b/Docker-compose.yml
@@ -1,7 +1,8 @@
 version: '3.1'
+def buildnumber=BUILD_NUMBER
 services:
   springboot:
-    image: hadvithadocker/spring-boot-mongo:2
+    image: hadvithadocker/spring-boot-mongo:${buildnumber}
     restart: always # This will be ignored if we deploy in docker swarm
     container_name: springbootapps
     environment:
@@ -23,7 +24,7 @@ services:
         delay: 10s
         max_attempts: 5
     networks:
-    - springbootbridge
+    - flipkartbridge
 
   mongo:
     image: mongo
@@ -35,7 +36,7 @@ services:
     - mongodbs:/data/db
     restart: always
     networks:
-    - flopkartbridge
+    - flikartbridge
 
 volumes:
   mongodbs:
@@ -43,3 +44,4 @@ volumes:
 networks:
   flipkartbridge :
     driver: bridge
+    
