--- a/Docker-compose.yml
+++ b/Docker-compose.yml
@@ -46,7 +46,7 @@ volumes:
     #external: true
 networks:
    default:
-   external:
+   external: true
    name: customoverlay
   #flipkartbridge :
     #driver: bridge
